--- a/app/src/main/res/layout/fragment_forecast.xml
+++ b/app/src/main/res/layout/fragment_forecast.xml
@@ -232,7 +232,7 @@
                 android:layout_height="53dp"
                 android:layout_weight="2"
                 android:padding="8dp"
-                android:src="@drawable/rainy" />
+                android:src="@drawable/thunder" />
 
             <TextView
                 android:layout_width="0dp"
@@ -264,7 +264,7 @@
                 android:layout_height="53dp"
                 android:layout_weight="2"
                 android:padding="8dp"
-                android:src="@drawable/rainy" />
+                android:src="@drawable/thunder" />
 
             <TextView
                 android:layout_width="0dp"
