--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="back_ground">#DFDFFF</color>
+    <color name="light_green">#DBFBDB</color>
+    <color name="light_pink">#FF4786</color>
 </resources>
