--- a/app/src/main/res/layout/fragment_weather.xml
+++ b/app/src/main/res/layout/fragment_weather.xml
@@ -6,10 +6,11 @@
     tools:context=".WeatherFragment">
 
     <!-- TODO: Update blank fragment layout -->
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:background="#dbfbdb"
+        android:background="@drawable/frame"
         android:orientation="horizontal">
         <TextView
             android:layout_width="wrap_content"
